--- a/src/components/net-banking/net-banking.css
+++ b/src/components/net-banking/net-banking.css
@@ -4,6 +4,8 @@
   display: block;
 }
 
+
+
 .backdrop{
   position: fixed;
   top: 0;
@@ -23,6 +25,17 @@
   border-radius: 5px;
   max-width: 500px;  
   width: 50%;
+  min-width: 400px;
+}
+
+@media all and (max-width : 500px){
+  .modal {
+    width: auto;
+    height: 100%;
+  }
+  .body{
+    height: 85vh;
+  }
 }
 
 .header{
@@ -126,4 +139,3 @@ img{
     box-shadow: 0 0 10px orangered inset;
   }
 
-  
